# montytrain

policy/: Cargo.toml
policy/src/: inputs.rs  main.rs  model.rs  moves.rs  preparer.rs  trainer.rs
policy/src/data/: loader.rs  reader.rs
policy/src/model/: diff.rs  diff_bwd.cu  diff_fwd.cu  grab.rs  mask.cu  mask.rs  select_affine.rs  select_sparse_affine.rs  set_bias.cu
policy/src/model/select_affine/: bwd.cu
policy/src/model/select_sparse_affine/: bwd.cu  fwd.cu
value/src/: arch.rs
