[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bullet_core = { package = "bullet_core", git = 'https://github.com/jw1912/bullet', rev = "5762205d7635f32920074ca5fb9d351443f456a4" }
bullet_cuda_backend = { package = "bullet_cuda_backend", git = 'https://github.com/jw1912/bullet', rev = "5762205d7635f32920074ca5fb9d351443f456a4" }
cudarc = "=0.16.4"
montyformat = "0.9.0"