[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bullet_core = { package = "bullet_core", git = 'https://github.com/jw1912/bullet', rev = "87563da99c573cb64e362da7416b7c06baef72a0" }
bullet_cuda_backend = { package = "bullet_cuda_backend", git = 'https://github.com/jw1912/bullet', rev = "87563da99c573cb64e362da7416b7c06baef72a0" }
cudarc = "=0.16.4"
montyformat = "0.9.0"